hphp/test/slow/like_types/like_casts_bad2.php.expectf

Fatal error: Expected constant expression for initializer in %s/hphp/test/slow/like_types/like_casts_bad2.php on line 3
